Triggers/objects/TrailheadEntityURLMapping__mdt/TrailheadEntityURLMapping__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata type to hold URL mappings for Badges, Projects, Superbadges, and Trails from the default https://developer.salesforce.com domain to the https://trailhead.salesforce.com domain.</description>
    <label>Trailhead Entity URL Mapping</label>
    <pluralLabel>Trailhead Entity URL Mappings</pluralLabel>
</CustomObject>