Triggers/objects/TrailheadEntityURLMapping__mdt/fields/DefaultPath__c.field-meta.xml
<CustomField>
    <fullName>DefaultPath__c</fullName>
    <description>Default path stored in the trailheadapp__URL__c field on the trailheadapp__Badge__c/trailheadapp__Trail__c record.</description>
    <label>Default Path</label>
    <required>true</required>
    <type>Url</type>
</CustomField>