Triggers/objects/TrailheadEntityURLMapping__mdt/fields/TrailheadEntityType__c.field-meta.xml
<CustomField>
    <fullName>TrailheadEntityType__c</fullName>
    <description>Type of Trailhead Entity for URL mapping.</description>
    <label>Trailhead Entity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Module</fullName>
                <default>true</default>
                <label>Module</label>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Superbadge</fullName>
            </value>
            <value>
                <fullName>Trail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>