Triggers/objects/TrailheadEntityURLMapping__mdt/fields/TrailheadPath__c.field-meta.xml
<CustomField>
    <fullName>TrailheadPath__c</fullName>
    <description>Mapped Trailhead path for Trailhead Entity Type.</description>
    <label>Trailhead Path</label>
    <required>true</required>
    <type>Url</type>
</CustomField>